# starshipper

./: .gitignore  Cargo.toml  README.md
server/: main.js  package.json
src/: account_parser.rs  config.rs  login.rs  main.rs  retrive.rs  send.rs
