[package]
name = "starshipper"
version = "0.1.0"
authors = ["Interfiber"]
edition = "2018"

[dependencies]
clap = "2.33.3"
text_io = "0.1.8"
curl = "0.4.34"
toml = "0.5.7"
indicatif = "0.15.0"
reqwest = { version = "0.10.9", features = ["blocking"] }
uuid = { version = "0.8.1", features = ["v4"] }
tokio = { version = "1.8", features = ["full"] }
